# mms_magnetotail_survey

./: .gitignore  Makefile  README.md  collect_edp.py  collect_feeps.py  collect_fgm.py  collect_fpi_moms.py  conda-lock.yml  create_data_files.py  environment.yml  link_files.py  pyproject.toml
diagnostics/: distribution.ipynb
lib/: __init__.py
lib.bak/analysis/E20_event/: __init__.py
lib.bak/load/: edp.py  fpi_moms.py
lib.bak/postprocess/: calculate_combined_omni.py
lib.bak/utils/: __init__.py  read_data.py  write_data.py
lib/calc/: background_removal.py
lib/load/: edp.py  feeps.py  fgm.py  fpi_moms.py
lib/postprocess/: calculate_combined_omni.py
lib/utils/: __init__.py  numeric.py  read_data.py  write_data.py
manuscripts/plasma_sheet_properties/: agujournal2019.cls  main.tex  main_with_trackchanges.tex  ref.bib  supporting_information.tex
projects/20170726_iaw_event/analysis/: plot_phi.py
projects/20170726_iaw_event/calc/: integrate_moments.py
projects/20170726_iaw_event/diagnostics/: compare_omni_distributions.py  integrator.py  test.py
projects/20170726_iaw_event/sync_data/: sync_edp.py  sync_fgm.py  sync_fpi.py  sync_mec.py
projects/magnetotail_survey/: build_edp_database.py  build_fgm_database.py  gather_data.py  test.py
projects/magnetotail_survey/fgm/: add_barycentric_B.py
projects/magnetotail_survey/gather_data/: download_fgm.py  download_tqf.py  gather_ancillary.py  gather_data.py  gather_edp.py  gather_feeps.py  gather_fgm.py  gather_fpi.py  gather_mec.py
projects/magnetotail_survey/mec/: add_gsm_coords.py
projects/magnetotail_survey/notebooks/: TODO.md  compare_mec_and_fgm_ephemeris.py
projects/magnetotail_survey/sync_data/: sync_edp.py  sync_fgm.py  sync_mec.py
resources/: intervals.csv  plasma_moments_bobs_routine.csv
scripts/: collect_edp.py  collect_feeps.py  collect_fgm.py  collect_fpi_moms.py  collect_mec.py  collect_omni.py  link_files.py  link_files_bak.py
scripts/Fig1_example/: plot.py
scripts/Fig1_fpi_feeps_combination_example/: plot.py
scripts/Fig2_inner_tail/: gather_histograms.py  plot.py
scripts/Fig3-4_compare_B14/: gather_histograms.py  plot.py
scripts/Fig5_dipole_tilt/: gather_histograms.py  plot.py
scripts/Fig6-7_XYZ_distribution/: gather_histograms.py  plot_XZ.py  plot_YZ.py
scripts/FigA1_lobe_stats/: gather_histograms.py  plot.py
scripts/FigB1_omni/: gather_histograms.py  plot.py
scripts/clm/: calculate.py  test.py
scripts/combine_omni/: integrator.py
scripts/combined_omni/: background.py  calculate.py  integrator.py  plot.py
scripts/plot_interval/: plot.py
src/lib/: __init__.py
src/mms_survey/: __init__.py
(+74 files in other folders)
